[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/little_chef.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/player_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/encontrar_puerta_nostalgia.gd" type="Script" id=3]
[ext_resource path="res://objects/portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://maps/backdoors.tscn" type="PackedScene" id=5]

[node name="encontrar_puerta_nostalgia" type="Node2D"]
script = ExtResource( 3 )

[node name="backdoors" parent="." instance=ExtResource( 5 )]

[node name="closed_door_2" parent="backdoors/door2" index="2" instance=ExtResource( 4 )]
position = Vector2( -1, 23 )

[node name="closed_door_3" parent="backdoors/door3" index="2" instance=ExtResource( 4 )]
position = Vector2( 2, -27 )

[node name="little_chef" parent="." instance=ExtResource( 1 )]
position = Vector2( 124, 187 )

[node name="player_camera" parent="." instance=ExtResource( 2 )]
position = Vector2( -73, 180 )

[node name="portal" parent="." instance=ExtResource( 4 )]
position = Vector2( 768, -48 )

[connection signal="player_entered" from="backdoors/door2/closed_door_2" to="." method="_on_closed_door_2_player_entered"]
[connection signal="player_entered" from="backdoors/door3/closed_door_3" to="." method="_on_closed_door_3_player_entered"]
[connection signal="player_entered" from="portal" to="." method="_on_portal_player_entered"]

[editable path="backdoors"]
